[package]
name = "no"
version = "1.0.0"
authors = ["Nexus <packages@nexy7574.co.uk>"]
edition = "2021"
description = "Yes, but no."
readme = "README.md"
repository = "https://github.com/nexy7574/no"
license-file = "LICENSE"

[dependencies]
maybe = { version = "*", optional = true, git = "https://github.com/nicroxio/maybe.git" }

[features]
default = []
maybe = ["maybe"]
all = ["maybe"]
deluxe = ["maybe"]
pro = ["maybe"]

[profile.release]
opt-level = 1
strip = "symbols"
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[[bin]]
name = "no"
path = "src/no.rs"
test = false
doctest = false
plugin = false
